fixing paragraph spacing

--- a/css/handheld.css
+++ b/css/handheld.css
@@ -39,7 +39,7 @@ margin-bottom:0.8em;
 p{
 font-family:Verdana, Arial, Helvetica, sans-serif;
 font-size:0.8em;
-margin-bottom:0.8em;
+margin-bottom:1.5em;
 }
 
 h2, a{
