--- a/css/layout.css
+++ b/css/layout.css
@@ -14,7 +14,10 @@ html, body{
 
 
 a{
+    /*
 	color:#CE181F;
+    */
+
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -37,6 +40,7 @@ p{
     font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif
 	color:#8e8361;
 	line-height:1.2em;
+    margin-bottom:1.5em;
 }
 
 
